infra/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - args:
            - /app/main
          command:
            - /app/wait-for.sh
            - db:5432
            - --
            - /app/start.sh
          image: docker.io/dreamcheck/simplebank:main
          name: api
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 64Mi
              cpu: "0.1"
      restartPolicy: Always
status: {}
