infra/k8s/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: adminer
  type: LoadBalancer
