infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - protocol: TCP
      name: api
      targetPort: 5000
      port: 5000
    - protocol: TCP
      name: gateway
      targetPort: 5050
      port: 5050
    - protocol: TCP
      name: grpc
      targetPort: 5050
      port: 6000
  selector:
    io.kompose.service: api
  type: ClusterIP
